fix banner/overcast overlap

--- a/scavenger2022/core/static/core/base.css
+++ b/scavenger2022/core/static/core/base.css
@@ -260,7 +260,7 @@ pre {
 }
 
 .deco27 {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100vw;
